--- a/src/sass/notifyme.scss
+++ b/src/sass/notifyme.scss
@@ -15,10 +15,11 @@
   font-size: 13px;
   font-family: helvetica, 'san-serif';
   color: $font-color-default;
-  display: inline-block;
+  display: flex;
+  align-items: center;
   max-width: 250px;
   text-align: left;
-  padding: 6px 6px 6px 45px;
+  padding: 10px 10px 10px 45px;
   border-radius: 2px;
   background-color: $bg-default;
   position: fixed;
@@ -84,16 +85,16 @@
     color: #333;
     opacity: 0.7;
     float: right;
-    right: -10px;
-    top: -5px;
-    position: relative;
+    right: -4px;
+    top: -4px;
+    position: absolute;
     background: transparent;
     border: none;
     box-shadow: none;
     cursor: pointer;
     transition: all .2s ease-in-out;
     &:after {
-      content: 'X';
+      content: 'x';
       color: #ddd;
     }
     &:hover,
@@ -120,7 +121,6 @@
     height: 30px;
     border-radius: 2px;
     position: absolute;
-    top: 5px;
     left: 5px;
     display: flex;
     justify-content: center;
