--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,3 +1,10 @@
+//Fonts
+$font-family: Helvetica, 'san-serif';
+$font-size: 13px;
+
+//Properties
+$max-width: 250px;
+
 //Default colors
 $font-color-default: #737373;
 $bg-default: #f5f5f5;
