--- a/src/sass/toastme.scss
+++ b/src/sass/toastme.scss
@@ -85,8 +85,8 @@
     color: #333;
     opacity: 0.7;
     float: right;
-    right: -4px;
-    top: -4px;
+    right: -2px;
+    top: -2px;
     position: absolute;
     background: transparent;
     border: none;
@@ -133,6 +133,7 @@
   }
   .toastme-content {
     white-space: nowrap;
+    min-width: 150px;
   }
 }
 
