--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -15,6 +15,7 @@ $success: #8BC34A;
 $danger: #f44336;
 $warning: #FF9800;
 $info: #2196F3;
+$question: #3F51B5;
 
 //Light theme
 $font-color-light: #737373;
