--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,5 @@
 //Fonts
-$font-family: Helvetica, 'san-serif';
+$font-family: Helvetica, "san-serif";
 $font-size: 13px;
 
 //Properties
@@ -9,13 +9,14 @@ $max-width: 250px;
 $font-color-default: #737373;
 $bg-default: #f5f5f5;
 
+$primary: #3f51b5;
 //Main colors
 $font-color: #fff;
-$success: #8BC34A;
+$success: #8bc34a;
 $danger: #f44336;
-$warning: #FF9800;
-$info: #2196F3;
-$question: #3F51B5;
+$warning: #ff9800;
+$info: #2196f3;
+$question: $primary;
 
 //Light theme
 $font-color-light: #737373;
