--- a/src/sass/toastme.scss
+++ b/src/sass/toastme.scss
@@ -1,153 +1,6 @@
-@import 'variables';
-
-@import 'dialog';
-
-@font-face {
-  font-family: 'toastme';
-  src:  url('../icons/toastme.eot?cksqmu');
-  src:  url('../icons/toastme.eot?cksqmu#iefix') format('embedded-opentype'),
-    url('../icons/toastme.ttf?cksqmu') format('truetype'),
-    url('../icons/toastme.woff?cksqmu') format('woff'),
-    url('../icons/toastme.svg?cksqmu#toastme') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-.toastme {
-  font-size: $font-size;
-  font-family: $font-family;
-  color: $font-color-default;
-  display: flex;
-  align-items: center;
-  max-width: $max-width;
-  text-align: left;
-  padding: 10px 10px 10px 45px;
-  border-radius: 2px;
-  background-color: $bg-default;
-  position: fixed;
-  opacity: 0.7;
-  cursor: pointer;
-  z-index: 100;
-  transform: translateY(20px);
-  transition: all .2s ease-in-out;
-  animation: toastIn .2s forwards 0s ease-in-out;
-  
-    &:hover,
-    &:focus { 
-      opacity: 1;
-    }
-  
-  &.success {
-    color: $font-color;
-    background-color: $success;
-    .toastme-ico {
-      color: $success;
-      &:before {
-        content: "\ea10";
-      }
-    }
-  }
-  
-  
-    &.error {
-    color: $font-color;
-    background-color: $danger;
-    .toastme-ico {
-      color: $danger;
-      &:before {
-        content: "\ea0d";
-      }
-    }
-  }
-  
-  &.warning {
-    color: $font-color;
-    background-color: $warning;
-    .toastme-ico {
-      color: $warning;
-      &:before {
-        content: "\ea07";
-      }
-    }
-  }
-  
-  &.info {
-    color: $font-color;
-    background-color: $info;
-    .toastme-ico {
-      color: $info;
-        &:before {
-          content: "\ea0c";
-      }
-    }
-  }
-  
-  
-  .toastme-close {
-    color: #333;
-    opacity: 0.7;
-    float: right;
-    right: -2px;
-    top: -2px;
-    position: absolute;
-    background: transparent;
-    border: none;
-    box-shadow: none;
-    cursor: pointer;
-    transition: all .2s ease-in-out;
-    &:after {
-      content: 'x';
-      color: #ddd;
-    }
-    &:hover,
-    &:focus { 
-      opacity: 1;
-    }
-  }
-  
-  .toastme-ico {
-    font-family: 'toastme' !important;
-    font-size: 1.5rem;
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    color: #333;
-    float: left;
-    font-style: normal;
-    width: 30px;
-    height: 30px;
-    border-radius: 2px;
-    position: absolute;
-    left: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background: #fff;
-    &:before {
-      content: "\ea08";
-    }
-  }
-  .toastme-content {
-    white-space: nowrap;
-    min-width: 150px;
-  }
-}
-
-//Light Theme
-@import 'theme-ligh';
-
-@keyframes toastIn {
-  0% {
-    opacity: 0;   
-  }
-  100%{
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+@import "variables";
+@import "icons";
+@import "buttons";
+@import "notifications";
+@import "theme-ligh";
+@import "dialogs";
