--- a/src/sass/_notifications.scss
+++ b/src/sass/_notifications.scss
@@ -71,7 +71,9 @@
     opacity: 0.7;
     float: right;
     right: -2px;
-    top: -2px;
+    top: 2px;
+    font-size: 8px;
+    @include iconbody;
     position: absolute;
     background: transparent;
     border: none;
