--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -19,6 +19,6 @@ $info: #2196f3;
 $question: $primary;
 
 //Light theme
-$font-color-light: #737373;
-$bg-light: #f9f9f9;
+$font-color-light: #333;
+$bg-light: #fff;
 $border-light: #ddd;
