--- a/src/sass/_dialogs.scss
+++ b/src/sass/_dialogs.scss
@@ -24,7 +24,7 @@ $question: #3f51b5;
   font-size: 3rem;
   @include iconbody;
   position: relative;
-  animation: toastDialogIn 0.4s ease-in-out 0s forwards;
+  animation: toastIconIn 0.4s ease-in-out 0s forwards;
   &.success {
     color: $success;
     &:before {
@@ -77,7 +77,7 @@ $question: #3f51b5;
   animation: toastDialogIn 0.2s ease-in-out 0s forwards;
 
   &.toastme-dialog-closing {
-    animation: toastDialogOut 0.2s ease-in-out 0s forwards;
+    animation: toastDialogOut 0.1s ease-in-out 0s forwards;
   }
 
   .toastme-dialog-title {
@@ -117,5 +117,20 @@ $question: #3f51b5;
   100% {
     transform: rotate(0) translateY(-30px);
     opacity: 0;
+  }
+}
+
+
+@keyframes toastIconIn {
+  0% {
+    transform: rotate(0) scale(1.01);
+    opacity: 0;
+  }
+  50% {
+    transform: rotate(0) scale(1.15);
+  }
+  100% {
+    transform: rotate(0) scale(1.0);
+    opacity: 1;
   }
 }
