--- a/src/sass/toastme.scss
+++ b/src/sass/toastme.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import "icons";
 @import "buttons";
+@import "animations";
 @import "notifications";
 @import "theme-ligh";
 @import "dialogs";
