--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -22,3 +22,10 @@ $question: $primary;
 $font-color-light: #333;
 $bg-light: #fff;
 $border-light: #ddd;
+
+
+//Dark theme
+$font-color-dark: #fff;
+$bg-dark: #252839;
+$border-dark: #252839;
+
