--- a/src/sass/toastme.scss
+++ b/src/sass/toastme.scss
@@ -3,5 +3,6 @@
 @import "buttons";
 @import "animations";
 @import "notifications";
+@import "theme-dark";
 @import "theme-ligh";
 @import "dialogs";
