--- a/src/sass/_notifications.scss
+++ b/src/sass/_notifications.scss
@@ -100,7 +100,7 @@
   }
 
   .toastme-close {
-    color: #333;
+    color: $font-color-default;
     opacity: 0.7;
     float: right;
     right: -2px;
@@ -125,7 +125,7 @@
 
   .toastme-ico {
     font-size: 1.5rem;
-    color: lighten(#333, 20%);
+    color: lighten($font-color-default, 20%);
     @include iconbody;
     float: left;
     width: 30px;
