Dark theme dialogs

--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -38,4 +38,14 @@
       border: 1px solid #ddd;
     }
   }
+
+  &.dark {
+    .btn-toastme {
+      &.--toastme-cancel {
+        color: $font-color-dark;
+        background: lighten($bg-dark, 15%);
+        border: 1px solid lighten($border-dark, 15%);
+      }
+    }
+  }
 }
