--- a/src/sass/_dialogs.scss
+++ b/src/sass/_dialogs.scss
@@ -87,13 +87,18 @@ $question: #3f51b5;
   box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.05);
   animation: toastDialogIn 0.2s ease-in-out 0s forwards;
 
+  &.dark {
+    color: $font-color-dark;
+    background: $bg-dark;
+    border: 1px solid $border-dark;
+  }
+
   &.toastme-dialog-closing {
     animation: toastDialogOut 0.1s ease-in-out 0s forwards;
   }
 
   .toastme-dialog-title {
     font-size: 15px;
-    color: #333;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0 0 10px;
@@ -102,7 +107,6 @@ $question: #3f51b5;
 
   .toastme-dialog-text {
     font-size: 14px;
-    color: #333;
     font-family: Helvetica, sans-serif;
     margin: 0 0 10px;
     line-height: 14px;
