Update border colors

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -23,7 +23,7 @@ $question: $primary;
 //Light theme
 $font-color-light: #333;
 $bg-light: #fff;
-$border-light: #ddd;
+$border-light: #f9f9f9;
 
 
 //Dark theme
