#12 Fix Dialog height broken

--- a/src/sass/_dialogs.scss
+++ b/src/sass/_dialogs.scss
@@ -16,6 +16,7 @@ $question: #3f51b5;
   z-index: 999;
   display: flex;
   justify-content: center;
+  align-items: flex-start;
 }
 
 .toastme-diag-actions {
