--- a/src/sass/_notifications.scss
+++ b/src/sass/_notifications.scss
@@ -6,10 +6,12 @@
   padding-inline-start: 0;
   margin-block-start: 0;
   margin-block-end: 0;
+  list-style: none;
 }
 
 .toastme {
   font-size: $font-size;
+  font-weight: 400;
   font-family: $font-family;
   color: $font-color-default;
   margin-bottom: 10px;
@@ -101,7 +103,8 @@
     opacity: 0.7;
     float: right;
     right: -2px;
-    top: 2px;
+    top: 3px;
+    outline: none;
     font-size: 8px;
     @include iconbody;
     position: absolute;
@@ -117,6 +120,7 @@
     &:hover,
     &:focus {
       opacity: 1;
+      outline: none;
     }
   }
 
