--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,12 +1,14 @@
 //Fonts
-$font-family: Helvetica, "san-serif";
+$font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,'Fira Sans','Droid Sans','Helvetica Neue',sans-serif;;
 $font-size: 13px;
 
 //Properties
 $max-width: 250px;
 
 //Default colors
-$font-color-default: #333;
+$question: #3f51b5;
+
+$font-color-default: #42526E;
 $bg-default: #f5f5f5;
 
 $primary: #3f51b5;
@@ -20,10 +22,13 @@ $warning: #ff9800;
 $info: #2196f3;
 $question: $primary;
 
+
+
+
 //Light theme
-$font-color-light: #333;
+$font-color-light: #42526E;
 $bg-light: #fff;
-$border-light: #ddd;
+$border-light: #f1f1f1;
 
 
 //Dark theme
